--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,22 +8,22 @@
 <h2>Wave — Dark Default</h2>
 <p>Deep ocean tones with warm foreground colors. Rich contrast for everyday use.</p>
 <p>
-  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/wave_1.png" alt="Wave — editor" width="48%">
-  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/wave_2.png" alt="Wave — completion" width="48%">
+  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/wave_1.png" alt="Wave — editor" width="370">
+  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/wave_2.png" alt="Wave — completion" width="370">
 </p>
 
 <h2>Dragon — Dark Muted</h2>
 <p>Earthy, subdued palette with lower contrast. Easy on the eyes for long sessions.</p>
 <p>
-  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/dragon_1.png" alt="Dragon — editor" width="48%">
-  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/dragon_2.png" alt="Dragon — completion" width="48%">
+  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/dragon_1.png" alt="Dragon — editor" width="370">
+  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/dragon_2.png" alt="Dragon — completion" width="370">
 </p>
 
 <h2>Lotus — Light</h2>
 <p>Warm parchment backgrounds with rich, saturated syntax colors.</p>
 <p>
-  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/lotus_1.png" alt="Lotus — editor" width="48%">
-  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/lotus_2.png" alt="Lotus — completion" width="48%">
+  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/lotus_1.png" alt="Lotus — editor" width="370">
+  <img src="https://raw.githubusercontent.com/followLemmi/jetbrains-kanagawa-colors/main/screenshots/lotus_2.png" alt="Lotus — completion" width="370">
 </p>
 
 <h2>Features</h2>
