--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -34,6 +34,17 @@
   <li>Works with all JetBrains IDEs: IntelliJ IDEA, WebStorm, PyCharm, GoLand, CLion, and more</li>
 </ul>
     ]]></description>
+    <change-notes><![CDATA[
+<h3>1.1.0</h3>
+<ul>
+  <li>Fix text selection visibility in Wave and Dragon themes — selection highlight was nearly indistinguishable from the editor background</li>
+</ul>
+
+<h3>1.0.0</h3>
+<ul>
+  <li>Initial release with three variants: Wave (dark), Dragon (dark muted), Lotus (light)</li>
+</ul>
+    ]]></change-notes>
     <depends>com.intellij.modules.platform</depends>
     <idea-version since-build="242"/>
 
